force-app/main/default/objects/Dummy03__c/Dummy03__c.object-meta.xml
<CustomObject>
    <label>Dummy03</label>
    <nameField>
        <label>Dummy03 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dummy03</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>