force-app/main/default/objects/Dummy03__c/fields/FooBar078__c.field-meta.xml
<CustomField>
    <fullName>FooBar078__c</fullName>
    <label>FooBar078</label>
    <length>255</length>
    <type>Text</type>
</CustomField>