force-app/main/default/objects/Dummy03__c/fields/FooBar110__c.field-meta.xml
<CustomField>
    <fullName>FooBar110__c</fullName>
    <label>FooBar110</label>
    <length>255</length>
    <type>Text</type>
</CustomField>