force-app/main/default/objects/Dummy03__c/fields/FooBar119__c.field-meta.xml
<CustomField>
    <fullName>FooBar119__c</fullName>
    <label>FooBar119</label>
    <length>255</length>
    <type>Text</type>
</CustomField>